--- a/portfolio-html-site/index.html
+++ b/portfolio-html-site/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hi There</h1>
+    <div class="placeholder">
+        I'm in a div !!!
+    </div>
+
+    <div class="anotherClass">
+        This is another class !!!
+    </div>
 </body>
 </html>
