--- a/portfolio-html-site/index.html
+++ b/portfolio-html-site/index.html
@@ -6,12 +6,30 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="placeholder">
-        I'm in a div !!!
-    </div>
+    <div class="container">
 
-    <div class="anotherClass">
-        This is another class !!!
+        <div class="nav-wrapper">
+
+            
+            <div class="left-side">
+                <div class="nav-link-wrapper">
+                    <a href="index.html">Home</a>
+                </div>
+
+                <div class="nav-link-wrapper">
+                    <a href="about.html">About</a>
+                </div>
+            </div>
+
+
+            <div class="right-side">
+                <div class="brand">
+                    <div>RICHARD ASENCIO</div>
+                </div>
+            </div>
+
+        </div>
+
     </div>
 </body>
 </html>
